<resources>
    <string name="app_name">MyApp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="RepPassword">Password again</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="registre">Register</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <array name="listUniverrsities">
        <item>Universite Cheich Anta Diop</item>
        <item>Universite de Thies</item>
        <item>Universite Gaston Berger</item>
        <item>Universite de Bambay</item>
        <item>Universite de Zinguenchor</item>
        <item>Universite Virtuel du Senegal</item>
    </array>
    <string name="title_activity_active_account">ActiveAccount</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <array name="listOfanonce">
        <item>vente</item>
        <item>location</item>
        <item>avis de recherche</item>
        <item>anonce</item>
    </array>
    <string name="title_activity_localisation">Localisation</string>
</resources>
